--- a/Model/WebAppDemo.Model/WebAppDemo.Model.csproj
+++ b/Model/WebAppDemo.Model/WebAppDemo.Model.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MetaData\EmployeeMetaData.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
