--- a/Api/WebAppDemo.Api/Web.config
+++ b/Api/WebAppDemo.Api/Web.config
@@ -66,6 +66,6 @@
     </providers>
   </entityFramework>
  <connectionStrings>
-    <add name="NorthWindContext" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=BuildrDBDev;integrated security=True;multipleactiveresultsets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="NorthWindContext" connectionString="Server=tcp:172.26.64.30,1433;Database=SkyErpDB;User ID=sa;Password=P@ssw0rd;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
