Add Study4 Logo , Add Test API

--- a/Api/WebAppDemo.Api/WebAppDemo.Api.csproj
+++ b/Api/WebAppDemo.Api/WebAppDemo.Api.csproj
@@ -124,6 +124,7 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\EmployeesController.cs" />
+    <Compile Include="Controllers\HelloWorldController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
